# book

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT_DETAILS.md  API_MANUAL.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md
docs/design/: book-recommendation-model.md  multi-theme-extension.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: BookCard.css  BookCard.jsx  ChatInterface.css  ChatInterface.jsx  RecommendationCard.css  RecommendationCard.jsx  RecommendationCards.css  RecommendationCards.jsx  ThemeSelector.css  ThemeSelector.jsx  UserProfile.css  UserProfile.jsx
frontend/src/constants/: themes.js
frontend/src/hooks/: useRecommendation.js  useThemeRouting.js
frontend/src/pages/: ThemePage.css  ThemePage.jsx
frontend/src/services/: api.js
frontend/src/test/: BookCard.test.jsx  RecommendationCard.test.jsx  setup.js
scripts/: run_dev.sh  run_tests.sh  setup.sh
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  assembler.py  base.py  essence_extractor.py  insight_provider.py  selector.py
src/models/: __init__.py  book.py  recommendation.py
src/prompts/anime/: assembler.txt  extractor.txt  insight.txt  selector.txt
src/prompts/books/: assembler.txt  extractor.txt  insight.txt  selector.txt
src/prompts/games/: assembler.txt  extractor.txt  insight.txt  selector.txt
src/prompts/movies/: assembler.txt  extractor.txt  insight.txt  selector.txt
src/services/: __init__.py  recommendation_service.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py
